--- a/app/src/main/res/layout/activity_estudio.xml
+++ b/app/src/main/res/layout/activity_estudio.xml
@@ -19,44 +19,15 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/carrito_icon"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/carrito_icon"
-            android:contentDescription="@string/carrito"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.517"
-            tools:ignore="TouchTargetSizeCheck"
-            tools:layout_conversion_absoluteHeight="40dp"
-            tools:layout_conversion_absoluteWidth="40dp" />
-
-        <com.nex3z.notificationbadge.NotificationBadge
-            android:id="@+id/badge"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignTop="@+id/carrito_icon"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_toRightOf="@+id/carrito_icon"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:nbMaxTextLength="2"
-            tools:ignore="MissingConstraints" />
-
-        <ImageButton
             android:id="@+id/perfil"
             android:layout_width="35dp"
             android:layout_height="42dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/perfil"
             android:contentDescription="@string/perfil"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/carrito_icon"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="40dp"
@@ -66,7 +37,7 @@
             android:id="@+id/menu"
             android:layout_width="40dp"
             android:layout_height="35dp"
-            android:layout_marginStart="14dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/menu"
@@ -118,7 +89,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/authLayout"
             android:layout_width="0dp"
-            android:layout_height="650dp"
+            android:layout_height="473dp"
             android:layout_marginBottom="30dp"
             android:background="@color/white"
             android:orientation="vertical"
@@ -130,8 +101,9 @@
             app:layout_constraintVertical_bias="0.0">
 
             <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="0dp"
+                android:layout_height="441dp"
+                tools:ignore="MissingConstraints">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -143,9 +115,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:background="@color/colorPrimary"
+                        android:fontFamily="sans-serif-black"
                         android:gravity="center"
                         android:text="Estudio disponible"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textSize="34sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -153,7 +128,7 @@
 
                     <View
                         android:id="@+id/divider"
-                        android:layout_width="391dp"
+                        android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="8dp"
                         android:background="?android:attr/listDivider"
@@ -164,22 +139,36 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/estudio_rec"
                         android:layout_width="match_parent"
-                        android:layout_height="459dp">
+                        android:layout_height="407dp">
 
                     </androidx.recyclerview.widget.RecyclerView>
-
-                    <Button
-                        android:id="@+id/back"
-                        android:layout_width="133dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="135dp"
-                        android:text="@string/back"
-                        android:textColor="#455A64" />
 
                 </LinearLayout>
             </ScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.nex3z.notificationbadge.NotificationBadge
+            android:id="@+id/badge"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignTop="@id/irCarrito"
+            android:layout_marginStart="255dp"
+            android:layout_toRightOf="@id/irCarrito"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/authLayout"
+            app:nbMaxTextLength="2" />
+
+        <Button
+            android:id="@+id/irCarrito"
+            android:layout_width="133dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="128dp"
+            android:layout_marginTop="10dp"
+            android:text="Ir carrito"
+            android:textColor="#455A64"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/authLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
