--- a/app/src/main/res/layout/carrito_layout.xml
+++ b/app/src/main/res/layout/carrito_layout.xml
@@ -1,47 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="12dp"
+    android:padding="8dp"
+    android:layout_margin="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/carrito_estudio"
-        style="@style/Widget.Inventory.ListItemTextView"
-        android:layout_width="121dp"
-        android:layout_height="48dp"
-        android:fontFamily="sans-serif"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Estudio sangre" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="16dp"
+        android:weightSum="5">
 
-    <TextView
-        android:id="@+id/carrito_informacion"
-        style="@style/Widget.Inventory.ListItemTextView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/carrito_estudio"
-        android:layout_marginStart="8dp"
-        android:fontFamily="sans-serif-medium"
-        android:textAlignment="textStart"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/carrito_estudio"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Es un estudio de ahsbdajskdasbdkjabsfkajsbfasf" />
+        <LinearLayout
+            android:layout_width="338dp"
+            android:layout_height="71dp"
+            android:layout_weight="3"
+            android:orientation="horizontal"
+            android:weightSum="5">
 
-    <TextView
-        android:id="@+id/carrito_precio"
-        style="@style/Widget.Inventory.ListItemTextView"
-        android:layout_width="80dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="76dp"
-        android:fontFamily="sans-serif-medium"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="$4555" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <RelativeLayout
+                android:layout_width="132dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/carrito_nombre"
+                    android:layout_width="124dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:text="Estudio sangre"
+                    android:textSize="17sp"
+                    android:textStyle="bold"></TextView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/btnMinus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_baseline_indeterminate_check_box_24"></ImageView>
+
+                    <TextView
+                        android:id="@+id/txtQuantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:gravity="bottom"
+                        android:text="1"
+                        android:textSize="20sp"></TextView>
+
+                    <ImageView
+                        android:id="@+id/btnPlus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_baseline_add_box_24"></ImageView>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/carrito_Reque"
+                    android:layout_width="135dp"
+                    android:layout_height="41dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginRight="42dp"
+                    android:layout_marginBottom="13dp"
+                    android:text="Requerimiento: No fumar"
+                    android:textAlignment="textStart"
+                    android:textSize="15sp"></TextView>
+
+                <TextView
+                    android:id="@+id/carrito_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginBottom="24dp"
+                    android:text="$1"
+                    android:textAlignment="textStart"
+                    android:textSize="15sp"></TextView>
+
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/btnDelete"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_baseline_clear_24"></ImageView>
+
+        </LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
